--- a/01-day-1/index.html
+++ b/01-day-1/index.html
@@ -18,7 +18,7 @@
                     <div class="zero-first"></div>
                     <div class="zero-second"></div>
                 </div>
-                <span class="big-text">Days</span>
+                <span class="large-text">Days</span>
                 <span class="small-text">CSS Challenge</span>
             </div>
 
